GOIT-23, added truncate pipe, styling fixes

--- a/src/app/shared/components/sprint/sprint.component.scss
+++ b/src/app/shared/components/sprint/sprint.component.scss
@@ -1,6 +1,10 @@
 @import '../../../../scss/mixins';
 
 .sprint-container {
+  background: inherit;
+  border-radius: inherit;
+  box-shadow: inherit;
+  transform: inherit;
   position: relative;
   padding: 20px 20px 40px;
 
